PID file improvements