@@ -4,47 +4,51 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.util.Optional;
 
 public class PidFile {
 
     private static final Logger LOG = LogManager.getLogger(PidFile.class);
 
-    private final static String PID_FILE_NAME = "nzyme-node.pid";
+    public static boolean isAlreadyRunning(String nodeName) throws IOException {
+        Path pidFile = getPidFile(nodeName);
 
-    public static boolean isAlreadyRunning() throws IOException {
-        Path pidFile = getPidFile();
-        if (pidFile.toFile().exists()) {
-            // Read the PID from the file.
-            String pidString = new String(Files.readAllBytes(pidFile), StandardCharsets.UTF_8).trim();
+        try {
+            // Attempt atomic claim of the PID file.
+            Files.writeString(pidFile, String.valueOf(ProcessHandle.current().pid()), StandardOpenOption.CREATE_NEW);
+            return false;
+        } catch (FileAlreadyExistsException e) {
+            // File exists, check if the owning process is still alive.
+            try {
+                String existing = Files.readString(pidFile).trim();
+                long existingPid = Long.parseLong(existing);
 
-            // Check if the process with this PID is running.
-            Optional<ProcessHandle> processHandle = ProcessHandle.of(Long.parseLong(pidString));
-            if (processHandle.isPresent() && processHandle.get().isAlive()) {
-                // A process with this PID is running, meaning nzyme is already running.
+                Optional<ProcessHandle> handle = ProcessHandle.of(existingPid);
+                if (handle.isPresent() && handle.get().isAlive()) {
+                    return true; // Genuinely already running.
+                }
+
+                // Stale PID file — delete and reclaim.
+                Files.delete(pidFile);
+                Files.writeString(pidFile, String.valueOf(ProcessHandle.current().pid()), StandardOpenOption.CREATE_NEW);
+                return false;
+            } catch (NumberFormatException ex) {
+                // Corrupted PID file. Do not start.
+                LOG.error("Corrupted PID file at [{}]", pidFile.toAbsolutePath(), ex);
                 return true;
             }
         }
-
-        // Create or overwrite the PID file with the current process ID.
-        Files.writeString(pidFile, String.valueOf(ProcessHandle.current().pid()));
-        return false;
     }
 
-    public static void removePidFile() {
-        Path pidFile = getPidFile();
-        try {
-            Files.deleteIfExists(pidFile);
-        } catch (IOException e) {
-            LOG.error("Could not delete PID file at [{}]", pidFile);
+    private static Path getPidFile(String nodeName) {
+        if (!nodeName.matches("^[a-zA-Z0-9_-]{1,64}$")) {
+            throw new IllegalArgumentException("Invalid node name: " + nodeName);
         }
-    }
-
-    private static Path getPidFile() {
-        return Path.of(System.getProperty("java.io.tmpdir"), PID_FILE_NAME);
+        return Path.of(System.getProperty("java.io.tmpdir"), nodeName + ".pid");
     }
 
 }
